--- a/textproc/soprano/Makefile
+++ b/textproc/soprano/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.4 2009/01/27 11:35:10 markd Exp $
+# $NetBSD: Makefile,v 1.5 2009/07/23 09:46:37 markd Exp $
 
-DISTNAME=	soprano-2.2
+DISTNAME=	soprano-2.3.0
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=soprano/}
 EXTRACT_SUFX=	.tar.bz2
@@ -8,6 +8,7 @@ EXTRACT_SUFX=	.tar.bz2
 MAINTAINER=	markd@NetBSD.org
 HOMEPAGE=	http://soprano.sourceforge.net/
 COMMENT=	QT based RDF framework
+LICENSE=	gnu-lgpl-v2
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
