--- a/audio/milkytracker/Makefile
+++ b/audio/milkytracker/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2014/01/02 06:45:47 dholland Exp $
+# $NetBSD: Makefile,v 1.7 2014/09/12 21:31:39 shattered Exp $
 #
-DISTNAME=	milkytracker-0.90.80
-PKGREVISION=	2
+
+DISTNAME=	milkytracker-0.90.86
 CATEGORIES=	audio
 MASTER_SITES=	http://milkytracker.org/files/
 EXTRACT_SUFX=	.tar.bz2
