--- a/geography/gdal-lib/Makefile
+++ b/geography/gdal-lib/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.68 2014/09/03 10:41:31 jperkin Exp $
+# $NetBSD: Makefile,v 1.69 2014/09/13 00:57:00 gdt Exp $
 
 VERSION=	1.9.2
 DISTNAME=	gdal-${VERSION}
 PKGNAME=	gdal-lib-${VERSION}
-PKGREVISION=	10
+PKGREVISION=	11
 CATEGORIES=	geography
 MASTER_SITES=	http://download.osgeo.org/gdal/
 
