--- a/multimedia/gnome-mplayer/Makefile
+++ b/multimedia/gnome-mplayer/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.39 2014/06/09 14:18:07 ryoon Exp $
+# $NetBSD: Makefile,v 1.40 2014/09/13 02:43:36 obache Exp $
 #
 
-DISTNAME=	gnome-mplayer-1.0.8
-PKGREVISION=	14
+DISTNAME=	gnome-mplayer-1.0.9
 CATEGORIES=	multimedia
-MASTER_SITES=	http://gnome-mplayer.googlecode.com/files/
+MASTER_SITES=	http://gnome-mplayer.googlecode.com/svn/packages/
 
 MAINTAINER=	obache@NetBSD.org
 HOMEPAGE=	http://code.google.com/p/gnome-mplayer/
