--- a/games/craft/Makefile
+++ b/games/craft/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.31 2013/01/21 06:56:38 dholland Exp $
+# $NetBSD: Makefile,v 1.32 2014/09/13 07:30:15 dholland Exp $
 
 DISTNAME=	craftcc35
 PKGNAME=	craft-3.5
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	games x11
 MASTER_SITES=	http://ibiblio.org/pub/linux/games/strategy/
 EXTRACT_SUFX=	.tar.Z
 
-PATCHFILES=	craft-jumbo-patch-20130120.gz
+PATCHFILES=	craft-jumbo-patch-20140913.gz
 PATCH_SITES=	http://www.NetBSD.org/~dholland/patchkits/craft/
 PATCH_DIST_STRIP= -p1
 
@@ -19,12 +19,17 @@ COMMENT=	Warcraft-like game for X11
 WRKSRC=		${WRKDIR}
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	pkg-config
+DEPENDS+=	netpbm>=10:../../graphics/netpbm
 HAS_CONFIGURE=	yes
 CONFIGURE_ARGS=	--destdir=${DESTDIR} --prefix=${PREFIX}
 
 # Note for reference that there's a craftdoc.tar.Z that can also be
 # downloaded; the only thing it contains that isn't in the main
 # distfile is a few unreferenced images.
+
+# XXX: this calls system("csh -f -c ...") in a few places. These
+# really ought to be patched out.
+USE_TOOLS+=	csh:run
 
 SUBST_CLASSES+=		buttons
 SUBST_STAGE.buttons=	pre-configure
