--- a/graphics/GUIlib/Makefile
+++ b/graphics/GUIlib/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.18 2012/10/06 14:10:39 asau Exp $
+# $NetBSD: Makefile,v 1.19 2014/09/13 11:44:44 shattered Exp $
 #
 
-DISTNAME=	GUIlib-1.1.0
-PKGREVISION=	7
+DISTNAME=	GUIlib-1.2.1
 CATEGORIES=	graphics
 MASTER_SITES=	http://www.libsdl.org/projects/GUIlib/src/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.libsdl.org/projects/GUIlib/
 COMMENT=	Very simple GUI framework library
+LICENSE=	public-domain
 
 GNU_CONFIGURE=		YES
 
