--- a/misc/vera/Makefile
+++ b/misc/vera/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.20 2013/04/06 20:27:25 rodent Exp $
+# $NetBSD: Makefile,v 1.21 2014/09/13 12:01:16 shattered Exp $
 
-DISTNAME=	vera-1.16
+DISTNAME=	vera-1.21a
 CATEGORIES=	misc
-MASTER_SITES=	http://home.snafu.de/ohei/FTP/ \
-		${MASTER_SITE_GNU:=vera/}
+MASTER_SITES=	${MASTER_SITE_GNU:=vera/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://cgi.snafu.de/ohei/user-cgi-bin/veramain-e.cgi
 COMMENT=	Virtual Entity of Relevant Acronyms
+LICENSE=	gnu-fdl-v1.3
 
 USE_TOOLS+=	makeinfo
 INFO_FILES=	yes
