--- a/devel/p5-Safe-Isa/Makefile
+++ b/devel/p5-Safe-Isa/Makefile
@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.3 2014/05/29 23:36:16 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2014/09/13 16:01:14 wen Exp $
 
-DISTNAME=	Safe-Isa-1.000002
+DISTNAME=	Safe-Isa-1.000005
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	devel perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/M/MS/MSTROUT/}
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/E/ET/ETHER/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Safe-Isa/
 COMMENT=	Call isa, can, does and DOES safely on things that may not be objects
 LICENSE=	${PERL5_LICENSE}
 
-PERL5_PACKLIST=	auto/Safe-Isa/.packlist
+PERL5_PACKLIST=	auto/Safe/Isa/.packlist
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
