--- a/parallel/slurm/Makefile
+++ b/parallel/slurm/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2014/05/29 23:37:14 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2014/09/13 16:49:27 asau Exp $
 
 DISTNAME=	slurm-2.6.4
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	parallel
 MASTER_SITES=	http://www.schedmd.com/download/archive/ \
 		http://www.schedmd.com/download/latest/ \
@@ -29,6 +29,8 @@ PKG_USERS=		slurm:slurm
 
 PKG_GECOS.slurm=	SLURM user
 PKG_SHELL.slurm=	$(NOLOGIN)
+
+RCD_SCRIPTS+=	slurmd slurmctld
 
 post-install:
 	$(INSTALL_DATA_DIR) $(DESTDIR)$(PREFIX)/share/examples/$(PKGBASE)
