--- a/textproc/hs-pandoc-types/Makefile
+++ b/textproc/hs-pandoc-types/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2014/09/09 19:09:09 szptvlfn Exp $
+# $NetBSD: Makefile,v 1.2 2014/09/13 22:23:28 szptvlfn Exp $
 
 DISTNAME=	pandoc-types-1.12.4.1
+PKGREVISION=	1
 CATEGORIES=	textproc
 
 MAINTAINER=	szptvlfn@NetBSD.org
