--- a/devel/p5-CPAN-Meta/Makefile
+++ b/devel/p5-CPAN-Meta/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2014/07/15 20:57:17 schmonz Exp $
+# $NetBSD: Makefile,v 1.14 2014/09/14 13:36:29 wiz Exp $
 
-DISTNAME=	CPAN-Meta-2.141520
+DISTNAME=	CPAN-Meta-2.142060
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=CPAN/}
