--- a/devel/p5-Test-Deep/Makefile
+++ b/devel/p5-Test-Deep/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.18 2014/06/09 19:00:16 schmonz Exp $
+# $NetBSD: Makefile,v 1.19 2014/09/14 13:40:19 wiz Exp $
 
-DISTNAME=		Test-Deep-0.112
+DISTNAME=		Test-Deep-0.113
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Test/}
