--- a/devel/p5-IO-Prompter/Makefile
+++ b/devel/p5-IO-Prompter/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2014/09/15 21:11:00 schmonz Exp $
+# $NetBSD: Makefile,v 1.5 2014/09/15 21:16:29 schmonz Exp $
 #
 
 DISTNAME=	IO-Prompter-0.004011
@@ -6,6 +6,7 @@ PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=IO/}
 
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/IO-Prompter/
 COMMENT=	Prompt for, read, vet, chomp, and encapsulate input
 LICENSE=	${PERL5_LICENSE}
