--- a/devel/p5-IO-Tty/Makefile
+++ b/devel/p5-IO-Tty/Makefile
@@ -1,13 +1,14 @@
-# $NetBSD: Makefile,v 1.30 2014/06/02 02:14:10 schmonz Exp $
+# $NetBSD: Makefile,v 1.31 2014/09/15 21:27:35 schmonz Exp $
 #
 
-DISTNAME=	IO-Tty-1.11
+DISTNAME=	IO-Tty-1.12
 PKGNAME=	p5-${DISTNAME:C/T/t/}
 SVR4_PKGNAME=	p5itt
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=IO/}
 
 MAINTAINER=	rhaen@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/dist/IO-Tty/
 COMMENT=	Another Perl class for I/O on tty and pseudo-tty devices
 LICENSE=	${PERL5_LICENSE}
 
