--- a/textproc/p5-Text-Unidecode/Makefile
+++ b/textproc/p5-Text-Unidecode/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2014/08/11 02:11:27 wen Exp $
+# $NetBSD: Makefile,v 1.11 2014/09/16 12:27:48 wen Exp $
 
-DISTNAME=	Text-Unidecode-1.01
+DISTNAME=	Text-Unidecode-1.22
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
@@ -8,6 +8,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Text-Unidecode/
 COMMENT=	Perl5 module that transliterates Unicode to US-ASCII
+LICENSE=	${PERL5_LICENSE}
 
 PERL5_PACKLIST=		auto/Text/Unidecode/.packlist
 
