--- a/databases/phppgadmin/Makefile
+++ b/databases/phppgadmin/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.30 2014/06/14 15:21:46 asau Exp $
+# $NetBSD: Makefile,v 1.31 2014/09/17 10:50:15 wiz Exp $
 
 DISTNAME=	phpPgAdmin-5.1
 PKGNAME=	${DISTNAME:S/PgAdmin/pgadmin/}
+PKGREVISION=	1
 CATEGORIES=	databases www
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=phppgadmin/}
 EXTRACT_SUFX=	.tar.bz2
@@ -53,7 +54,7 @@ do-install:
 	done
 # data:
 	cd ${WRKSRC}; \
-	for f in $$(find . -name "*.sql" -o -name "*.txt" -o -name "*.css" -o -name "*.js" -o -name "*.png" -o "*.gif" -o "*.ico"); do \
+	for f in $$(find . -name "*.sql" -o -name "*.txt" -o -name "*.css" -o -name "*.js" -o -name "*.png" -o -name "*.gif" -o -name "*.ico"); do \
 		${INSTALL_DATA} $$f ${DESTDIR}${PHPPGBASE}/$$f; \
 	done
 
